infrastructure/kubernetes/rabbitmq.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
name: rabbitmq
namespace: jarchia
spec:
serviceName: rabbitmq
replicas: 1
selector:
matchLabels:
app: rabbitmq
template:
metadata:
labels:
app: rabbitmq
spec:
containers:
- name: rabbitmq
image: rabbitmq:3.12-management-alpine
valueFrom:
secretKeyRef:
name: jarchia-secrets
key: rabbitmq-user
- name: RABBITMQ_DEFAULT_PASS
valueFrom:
secretKeyRef:
name: jarchia-secrets
key: rabbitmq-password
ports:
- containerPort: 5672
- containerPort: 15672
